--- a/docs/_data/maturity-model.yaml
+++ b/docs/_data/maturity-model.yaml
@@ -1,5 +1,4 @@
-facets:
-  - name: Vetting
+Vetting:
     lvl0: Doesn't know non-negotiatables or have vetting questions. Approaches relationships in a "Let's see how it goes" mindset. Lacks understanding of responsibility and intention
     lvl1: Has identified a hand full of non-negotiatbles top of mind and starts asking some vetting questions about relationship expectations.
     lvl2: Has identified a list of non-negotiables, red/yellow/green flags, personal boundaries and able to ask questions to expose potential compatibility issues. Feels comfortable engaging in vetting conversation and able to negotiate relationship expectations upfront.
