--- a/docs/_data/maturity-model.yaml
+++ b/docs/_data/maturity-model.yaml
@@ -4,3 +4,5 @@
   lvl2: Has identified a list of non-negotiables, red/yellow/green flags, personal boundaries and able to ask questions to expose potential compatibility issues. Feels comfortable engaging in vetting conversation and able to negotiate relationship expectations upfront.
   lvl3: Comfortable initiating vetting conversations including topics such as non-negotiables, limits, compatibility and other relationship expectations. Being able to spot red flags by asking clarification questions to understand the intent behind the statement. Able to set boundaries and maintain boundaries.
   comments: One style of vetting is focusing on friendship first and then renegoating boundaries overtime.
+  tools:
+    - [Relationship Anarchy Smorgasbord](https://tinyurl.com/rasmorgasbord)
