--- a/docs/_data/maturity-model.yaml
+++ b/docs/_data/maturity-model.yaml
@@ -5,4 +5,5 @@
   lvl3: Comfortable initiating vetting conversations including topics such as non-negotiables, limits, compatibility and other relationship expectations. Being able to spot red flags by asking clarification questions to understand the intent behind the statement. Able to set boundaries and maintain boundaries.
   comments: One style of vetting is focusing on friendship first and then renegoating boundaries overtime.
   tools:
-    - "[Relationship Anarchy Smorgasbord](https://tinyurl.com/rasmorgasbord)"
+    - title: Relationship Anarchy Smorgasbord
+      link: https://tinyurl.com/rasmorgasbord
