--- a/docs/_data/maturity-model.yaml
+++ b/docs/_data/maturity-model.yaml
@@ -7,3 +7,7 @@
   tools:
     - title: Relationship Anarchy Smorgasbord
       link: https://tinyurl.com/rasmorgasbord
+    - title: Relationship Autonomy Index (RAI)
+      link: https://link.medium.com/ILzz79ALKjb
+    - title: M.O.V.I.E.S.S
+      link: https://www.reddit.com/r/polyamory/comments/8mc01x/glass_ceiling_questions_moviess/
